feat: ✨ converting received data form API to JSON, even with two chunks on the same transmission

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-	"cSpell.words": ["animeflv", "NDJSON"]
+	"cSpell.words": [
+		"adipisicing",
+		"amet",
+		"animeflv",
+		"consectetur",
+		"elit",
+		"ndjson",
+		"NDJSON"
+	]
 }
